# AviUtl-Bevel_And_Emboss_M-Script

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE.txt  Readme.md
.github/: dependabot.yml
.github/workflows/: build.yml
dll_src/: Bevel_And_Emboss_M.cpp  CMakeLists.txt
script/: Bevel_And_Emboss_M.anm
